--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.15.2",
+    "mysql": "^2.13.0",
+    "querystring": "^0.2.0",
     "rangeslider.js": "^2.3.0",
     "semantic-ui": "^2.2.10"
   }
